[package]
name = "mobc2"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
futures-channel = "0.3.15"
async-trait = "0.1.50"
async-std = "1.9.0"

[dev-dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }